--- a/HTML/content/music/build_instruments.html
+++ b/HTML/content/music/build_instruments.html
@@ -1,121 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Guest Tracker</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-size: 24px;
-        }
-        .container {
-            padding: 20px;
-        }
-        .section {
-            background: white;
-            padding: 20px;
-            margin: 10px 0;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid black;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-        .footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
+<html>
 <body>
-    <div class="header">Hotel Guest Tracker</div>
-    <div class="container">
-        <div class="section">
-            <h2>Add Guest</h2>
-            <form id="guestForm">
-                <input type="text" id="name" placeholder="Guest Name" required>
-                <input type="text" id="room" placeholder="Room Number" required>
-                <input type="date" id="checkin" required>
-                <input type="date" id="checkout" required>
-                <button type="submit">Add Guest</button>
-            </form>
-        </div>
-        <div class="section">
-            <h2>Guest List</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Room</th>
-                        <th>Check-in</th>
-                        <th>Check-out</th>
-                    </tr>
-                </thead>
-                <tbody id="guestList"></tbody>
-            </table>
-            <button id="saveBtn">Save</button>
-            <button id="loadBtn">Load</button>
-        </div>
-    </div>
-    <div class="footer">&copy; 2025 Hotel Guest Tracker</div>
-    
-    <script>
-        let guests = [];
-        document.getElementById('guestForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            let name = document.getElementById('name').value;
-            let room = document.getElementById('room').value;
-            let checkin = document.getElementById('checkin').value;
-            let checkout = document.getElementById('checkout').value;
-            guests.push({ name, room, checkin, checkout });
-            updateTable();
-            this.reset();
-        });
-        function updateTable() {
-            let tbody = document.getElementById('guestList');
-            tbody.innerHTML = '';
-            guests.forEach(guest => {
-                let row = `<tr><td>${guest.name}</td><td>${guest.room}</td><td>${guest.checkin}</td><td>${guest.checkout}</td></tr>`;
-                tbody.innerHTML += row;
-            });
-        }
-        document.getElementById('saveBtn').addEventListener('click', function() {
-            localStorage.setItem('guests', JSON.stringify(guests));
-            alert('Guest list saved successfully!');
-        });
-        document.getElementById('loadBtn').addEventListener('click', function() {
-            let data = localStorage.getItem('guests');
-            if (data) {
-                guests = JSON.parse(data);
-                updateTable();
-                alert('Guest list loaded successfully!');
-            } else {
-                alert('No guest data found!');
-            }
-        });
-    </script>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
 </body>
 </html>
