--- a/HTML/content/music/build_instruments.html
+++ b/HTML/content/music/build_instruments.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body><h3> management/h3>
+<body><h3> management</h3>
 <h2> i like musics </h2>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
-<h2> management </h2></h2></body>
+<h2> management </h2>
+
+</body>
 </html>
-<h3> guests </h3>h3>
+
