--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -10,6 +10,9 @@
     <title>Algebra | बीजगणित</title>
 <!-- title tag adds text to the tab in the bvrowser -->
     <style>
+ <!-- स्तिले तग लै ोम्पुतेर मा वयको वेबसिदे र ोम्पुतेर म वयक  JavaScript प्रयोग गरेर <style> ट्याग परिवर्तन गर्ने
+यदि तपाईंले CSS लाई JavaScript मार्फत परिवर्तन गर्न चाहनुहुन्छ भने, निम्न तरिका अपनाउन सक्नुहुन्छ।
+  -->       
         h1 { color: blue; }
         h2 { color: green; }
         h3 { color: red; }
@@ -27,6 +30,9 @@
             });
         }
     </script>
+
+
+</good morming>
 </head>
 <body>
     <usdyujdshvaxjytcazjxdfvbxzcju djv cn zsdhyuvoasdytusdfj
