--- a/HTML/content/music/build_instruments.html
+++ b/HTML/content/music/build_instruments.html
@@ -7,7 +7,7 @@
 
 <h2> management </h2>
 <a href="https://www.youtube.com">This is a link</a>
-<a https://mail.google.com/mail/u/0/#inbox</a>
-</body>
-</html>
+<a href="https://mail.google.com/mail/u/0/#inbox">gmail</a>
+
+
 
