--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -40,8 +40,8 @@
         <li>Apple</li>
         <li>Banana</li>
         <li>Orangeh</li>
-    </ul>
-    
+    </ul have all xame>
+    </usdyujdshvaxjytcazjxdfvbxzcju>
     <h1>What color am I?</h1>
     <h2>Green</h2>
     <h3>Red</h3>
@@ -51,7 +51,7 @@
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
-    </ul>
+    </ul asDZcgsudtcaersfy>
     
     <button onclick="changeListColors()">Change List Colors</button>
 </body>
