--- a/HTML/content/music/build_instruments.html
+++ b/HTML/content/music/build_instruments.html
@@ -8,6 +8,7 @@
 <h2> management </h2>
 <a href="https://www.youtube.com">This is a link</a>
 <a href="https://mail.google.com/mail/u/0/#inbox">gmail</a>
+<a href="https://google.com">go to google</a>
 
 
 
