--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -10,9 +10,32 @@
     <title>Algebra | बीजगणित</title>
 <!-- title tag adds text to the tab in the bvrowser -->
     <style>
- <!-- स्तिले तग लै ोम्पुतेर मा वयको वेबसिदे र ोम्पुतेर म वयक  JavaScript प्रयोग गरेर <style> ट्याग परिवर्तन गर्ने
-यदि तपाईंले CSS लाई JavaScript मार्फत परिवर्तन गर्न चाहनुहुन्छ भने, निम्न तरिका अपनाउन सक्नुहुन्छ।
-  -->       
+<!-- 
+        <style> ट्याग एक HTML तत्व हो जसले CSS (Cascading Style Sheets) नियमहरू 
+        प्रत्यक्ष रूपमा HTML दस्तावेज भित्र परिभाषित गर्न प्रयोग गरिन्छ।  
+        यो <head> सेक्सन भित्र राखिन्छ र यसले वेबपेजका तत्वहरूमा 
+        रंग, फन्ट, मार्जिन, र लेआउट गुणहरू जस्ता शैलीहरू लागू गर्न अनुमति दिन्छ।
+
+        उदाहरण:
+        <style>
+            body {
+                background-color: lightblue;
+                font-family: Arial, sans-serif;
+            }
+            h1 {
+                color: darkblue;
+            }
+        </style>
+
+        मुख्य बुँदाहरू:
+        - <style> ट्याग आन्तरिक CSS समावेश गर्न प्रयोग गरिन्छ।
+        - यसले CSS नियमहरूलाई बाह्य फाइल लिंक नगरी प्रयोग गर्न अनुमति दिन्छ।
+        - <style> ट्याग भित्रको शैलीहरू सोही दस्तावेज भित्र मात्र लागू हुन्छन्।
+        - राम्रो अभ्यासको लागि यसलाई <head> सेक्सन भित्र राख्नु पर्छ।
+
+        तर, ठूला प्रोजेक्टहरूमा राम्रो व्यवस्थापनको लागि <link> ट्याग प्रयोग गरी 
+        बाह्य CSS फाइल लिंक गर्नु सिफारिस गरिन्छ।
+    -->  
         h1 { color: blue; }
         h2 { color: green; }
         h3 { color: red; }
