--- a/HTML/content/stories/Arjun.html
+++ b/HTML/content/stories/Arjun.html
@@ -51,6 +51,7 @@
                 He was brave, imaginative, and always eager to experience something new.
                 One day, as he reached the edge of the forest, he saw a mysterious door.
             </p>
+            <img src="https://nepal-web.s3.us-west-2.amazonaws.com/images/arjun1.webp">
         </div>
         
         <div class="section">
