--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -70,7 +70,7 @@
     <h3>Red</h3>
     <h4>Orange</h4>
     
-    <ul>
+    <ul>HTML (HyperText Markup Language) è il linguaggio di markup utilizzato per creare pagine web. Struttura i contenuti di una pagina utilizzando elementi e tag, che definis/li>
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
