--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -75,7 +75,41 @@
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
-    </ul asDZcgsudtcaersfy>
+    </ul ### **Profit and Loss in Math**  
+
+Profit and Loss are basic financial concepts used in business and everyday transactions. They help determine whether a business or individual gains or loses money in a transaction.  
+
+1. **Profit**: When the selling price (SP) of an item is greater than its cost price (CP), the seller makes a profit.  
+   - **Formula:**  
+     \[
+     \text{Profit} = \text{Selling Price} - \text{Cost Price}
+     \]
+   - **Profit Percentage:**  
+     \[
+     \text{Profit%} = \left( \frac{\text{Profit}}{\text{Cost Price}} \right) \times 100
+     \]
+
+2. **Loss**: When the selling price (SP) of an item is less than its cost price (CP), the seller incurs a loss.  
+   - **Formula:**  
+     \[
+     \text{Loss} = \text{Cost Price} - \text{Selling Price}
+     \]
+   - **Loss Percentage:**  
+     \[
+     \text{Loss%} = \left( \frac{\text{Loss}}{\text{Cost Price}} \right) \times 100
+     \]
+
+3. **Selling Price and Cost Price Formulas**:  
+   - Selling Price when profit is given:  
+     \[
+     \text{SP} = \text{CP} + \text{Profit}
+     \]
+   - Selling Price when loss is given:  
+     \[
+     \text{SP} = \text{CP} - \text{Loss}
+     \]
+
+These formulas are widely used in real-life business transactions, accounting, and economics to determine financial success or failure.>
     
     <button onclick="changeListColors()">Change List Colors</button>
 </body>
