--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -1,48 +1,17 @@
 <!DOCTYPE html>
-<!-- doctype html tells the page what kind of file this is -->
 <html lang="ne">
-<!-- html stands for hyper text markup language-->    
 <head>
-<!-- head tag is for style and other information and scripts -->
     <meta charset="UTF-8">
-<!-- UTF-8 allows devangiri script -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algebra | बीजगणित</title>
-<!-- title tag adds text to the tab in the bvrowser -->
     <style>
-<!-- 
-        <style> ट्याग एक HTML तत्व हो जसले CSS (Cascading Style Sheets) नियमहरू 
-        प्रत्यक्ष रूपमा HTML दस्तावेज भित्र परिभाषित गर्न प्रयोग गरिन्छ।  
-        यो <head> सेक्सन भित्र राखिन्छ र यसले वेबपेजका तत्वहरूमा 
-        रंग, फन्ट, मार्जिन, र लेआउट गुणहरू जस्ता शैलीहरू लागू गर्न अनुमति दिन्छ।
-
-        उदाहरण:
-        <style>
-            body {
-                background-color: lightblue;
-                font-family: Arial, sans-serif;
-            }
-            h1 {
-                color: darkblue;
-            }
-        </style>
-
-        मुख्य बुँदाहरू:
-        - <style> ट्याग आन्तरिक CSS समावेश गर्न प्रयोग गरिन्छ।
-        - यसले CSS नियमहरूलाई बाह्य फाइल लिंक नगरी प्रयोग गर्न अनुमति दिन्छ।
-        - <style> ट्याग भित्रको शैलीहरू सोही दस्तावेज भित्र मात्र लागू हुन्छन्।
-        - राम्रो अभ्यासको लागि यसलाई <head> सेक्सन भित्र राख्नु पर्छ।
-
-        तर, ठूला प्रोजेक्टहरूमा राम्रो व्यवस्थापनको लागि <link> ट्याग प्रयोग गरी 
-        बाह्य CSS फाइल लिंक गर्नु सिफारिस गरिन्छ।
-    -->  
         h1 { color: blue; }
         h2 { color: green; }
         h3 { color: red; }
         h4 { color: orange; }
-        p { color: #34b973; }
-        ul li { color:#34b973; }
-       body { background-color: black to red; }
+        h5 { color: purple; }
+        p, ul li { color: #34b973; }
+        body { background: linear-gradient(to right, black, red); color: white; }
     </style>
     <script>
         function changeListColors() {
@@ -53,64 +22,48 @@
             });
         }
     </script>
-
-
-</good morming>
 </head>
 <body>
-    <usdyujdshvaxjytcazjxdfvbxzcju djv cn zsdhyuvoasdytusdfj
-    <ul>
-        <li>Apple</li>
-        <li>Banana</li>
-        <li>Orangeh</li>
-    </ul have all xame>
-    </usdyujdshvaxjytcazjxdfvbxzcju>
     <h1>What color am I?</h1>
     <h2>Green</h2>
     <h3>Red</h3>
     <h4>Orange</h4>
-    <h5>papul</h5>
-    
-    <ul>HTML (HyperText Markup Language) è il linguaggio di markup utilizzato per creare pagine web. Struttura i contenuti di una pagina utilizzando elementi e tag, che definis/li>
+    <h5>Purple</h5>
+
+    <ul>
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
-    </ul ### **Profit and Loss in Math**  
+    </ul>
 
-Profit and Loss are basic financial concepts used in business and everyday transactions. They help determine whether a business or individual gains or loses money in a transaction.  
-
-1. **Profit**: When the selling price (SP) of an item is greater than its cost price (CP), the seller makes a profit.  
-   - **Formula:**  
-     \[
-     \text{Profit} = \text{Selling Price} - \text{Cost Price}
-     \]
-   - **Profit Percentage:**  
-     \[
-     \text{Profit%} = \left( \frac{\text{Profit}}{\text{Cost Price}} \right) \times 100
-     \]
-
-2. **Loss**: When the selling price (SP) of an item is less than its cost price (CP), the seller incurs a loss.  
-   - **Formula:**  
-     \[
-     \text{Loss} = \text{Cost Price} - \text{Selling Price}
-     \]
-   - **Loss Percentage:**  
-     \[
-     \text{Loss%} = \left( \frac{\text{Loss}}{\text{Cost Price}} \right) \times 100
-     \]
-
-3. **Selling Price and Cost Price Formulas**:  
-   - Selling Price when profit is given:  
-     \[
-     \text{SP} = \text{CP} + \text{Profit}
-     \]
-   - Selling Price when loss is given:  
-     \[
-     \text{SP} = \text{CP} - \text{Loss}
-     \]
-
-These formulas are widely used in real-life business transactions, accounting, and economics to determine financial success or failure.>
-    
     <button onclick="changeListColors()">Change List Colors</button>
+
+    <h2>Profit and Loss in Math</h2>
+    <p>
+        Profit and Loss are basic financial concepts used in business and everyday transactions. They help determine whether a business or individual gains or loses money in a transaction.
+    </p>
+    <h3>Profit</h3>
+    <p>
+        When the selling price (SP) of an item is greater than its cost price (CP), the seller makes a profit.
+    </p>
+    <p><strong>Formula:</strong></p>
+    <p>Profit = Selling Price - Cost Price</p>
+    <p><strong>Profit Percentage:</strong></p>
+    <p>Profit% = (Profit / Cost Price) × 100</p>
+
+    <h3>Loss</h3>
+    <p>
+        When the selling price (SP) of an item is less than its cost price (CP), the seller incurs a loss.
+    </p>
+    <p><strong>Formula:</strong></p>
+    <p>Loss = Cost Price - Selling Price</p>
+    <p><strong>Loss Percentage:</strong></p>
+    <p>Loss% = (Loss / Cost Price) × 100</p>
+
+    <h3>Selling Price and Cost Price Formulas</h3>
+    <p>Selling Price when profit is given:</p>
+    <p>SP = CP + Profit</p>
+    <p>Selling Price when loss is given:</p>
+    <p>SP = CP - Loss</p>
 </body>
 </html>
