--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -34,7 +34,192 @@
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
-    </ul>
+    </ul>### HTML का मूलभूत विशेषताहरू (Basic Features of HTML)  
+
+HTML (HyperText Markup Language) वेब पृष्ठहरूको संरचना बनाउन प्रयोग गरिन्छ। यसमा विभिन्न ट्यागहरू (tags) हुन्छन् जसले सामग्री (content) लाई व्यवस्थित गर्छ। प्रत्येक HTML विशेषतासँग एउटा उदाहरण प्रस्तुत गरिएको छ, जसले तपाईंलाई बुझ्न सजिलो बनाउँछ।  
+
+---
+
+## 1. **संरचना र लेआउट (Structure and Layout)**  
+HTML ले वेब पृष्ठको आधारभूत संरचना प्रदान गर्छ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>मेरो पहिलो वेबपेज</title>
+</head>
+<body>
+    <h1>मेरो वेबसाइटमा स्वागत छ</h1>
+    <p>यो मेरो वेबपेजको बारेमा जानकारी दिने अनुच्छेद हो।</p>
+    <div>यो सामग्री व्यवस्थापन गर्न प्रयोग गरिएको एउटा भाग हो।</div>
+</body>
+</html>
+```
+👉 वेबपेजको मुख्य भाग निर्धारण गर्छ।  
+
+---
+
+## 2. **हाइपरलिङ्क (Hyperlinks - `<a>` Tag)**  
+HTML ले वेब पृष्ठहरूलाई आपसमा जोड्न प्रयोग गरिन्छ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<a href="https://www.google.com">गुगलमा जानुहोस्</a>
+```
+👉 यस लिंकमा क्लिक गर्दा गुगल खुल्नेछ।  
+
+---
+
+## 3. **मल्टिमिडिया समर्थन (Multimedia Support)**  
+HTML ले छवि, अडियो, र भिडियो समर्थन गर्छ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<img src="image.jpg" alt="उदाहरण छवि" width="300">
+
+<audio controls>
+    <source src="audio.mp3" type="audio/mpeg">
+</audio>
+
+<video width="320" height="240" controls>
+    <source src="video.mp4" type="video/mp4">
+</video>
+```
+👉 वेबपृष्ठमा छवि, अडियो र भिडियो राख्न सकिन्छ।  
+
+---
+
+## 4. **फारम र इनपुट (Forms and Input)**  
+HTML फारम प्रयोगकर्ताबाट डेटा संकलन गर्न प्रयोग गरिन्छ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<form action="/submit" method="post">
+    नाम: <input type="text" name="name"><br>
+    इमेल: <input type="email" name="email"><br>
+    <button type="submit">पेश गर्नुहोस्</button>
+</form>
+```
+👉 प्रयोगकर्ताले आफ्नो नाम र इमेल प्रविष्ट गर्न सक्छ।  
+
+---
+
+## 5. **अर्थपूर्ण तत्वहरू (Semantic Elements)**  
+HTML मा `header`, `section`, `footer` जस्ता तत्वहरूले वेबपृष्ठलाई व्यवस्थित बनाउँछ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<header>
+    <h1>वेबसाइट शीर्षक</h1>
+</header>
+<section>
+    <h2>हाम्रोबारे</h2>
+    <p>हामी उत्कृष्ट सेवा प्रदान गर्छौं।</p>
+</section>
+<footer>
+    <p>सम्पर्क: example@email.com</p>
+</footer>
+```
+👉 वेबपृष्ठलाई सजिलै पढ्न सकिन्छ।  
+
+---
+
+## 6. **CSS र JavaScript एकीकरण (CSS and JavaScript Integration)**  
+HTML लाई CSS ले सुन्दर बनाउँछ र JavaScript ले अन्तरक्रियात्मक (interactive) बनाउँछ।  
+
+🔹 **CSS Example (उदाहरण)**  
+```html
+<style>
+    body { background-color: lightblue; }
+    h1 { color: darkblue; }
+</style>
+```
+👉 पृष्ठको पृष्ठभूमि निलो रंगमा बदलिन्छ।  
+
+🔹 **JavaScript Example (उदाहरण)**  
+```html
+<script>
+    function sayHello() {
+        alert("नमस्ते, स्वागत छ!");
+    }
+</script>
+
+<button onclick="sayHello()">क्लिक गर्नुहोस्</button>
+```
+👉 बटनमा क्लिक गर्दा सन्देश देखिन्छ।  
+
+---
+
+## 7. **उत्तरदायी डिजाइन (Responsive Design)**  
+HTML मा `meta viewport` ले वेबपृष्ठलाई मोबाइलमैत्री बनाउँछ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+```
+👉 वेबपृष्ठ मोबाइल उपकरणहरूमा राम्रो देखिन्छ।  
+
+---
+
+## 8. **तालिका र सूची (Tables and Lists)**  
+HTML तालिकाहरू डेटा व्यवस्थित गर्न र सूचीहरू वस्तुहरू देखाउन प्रयोग गरिन्छ।  
+
+🔹 **Table Example (तालिका उदाहरण)**  
+```html
+<table border="1">
+    <tr>
+        <th>नाम</th>
+        <th>उमेर</th>
+    </tr>
+    <tr>
+        <td>राम</td>
+        <td>२५</td>
+    </tr>
+</table>
+```
+👉 तालिकाले डेटा देखाउँछ।  
+
+🔹 **List Example (सूची उदाहरण)**  
+```html
+<ul>
+    <li>स्याउ</li>
+    <li>केरा</li>
+</ul>
+```
+👉 बुलेट सूची देखिन्छ।  
+
+---
+
+## 9. **मेटाडाटा र SEO (Metadata and SEO)**  
+HTML मा `<meta>` ट्यागले खोजी इञ्जिनको लागि महत्त्वपूर्ण जानकारी दिन्छ।  
+
+🔹 **Example (उदाहरण)**  
+```html
+<head>
+    <meta name="description" content="यो एउटा उत्कृष्ट वेबसाइट हो।">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="राम कुमार">
+</head>
+```
+👉 खोजी इञ्जिनले वेबपृष्ठलाई राम्रोसँग सूचीकृत गर्छ।  
+
+---
+
+## 10. **खुला मानक (Open Standard)**  
+HTML सबै ब्राउजरहरूले समर्थन गर्छन् र W3C द्वारा अपडेट गरिन्छ।  
+
+👉 HTML हर समय अद्यावधिक भइरहन्छ र सबै ब्राउजरमा काम गर्छ।  
+
+---
+
+### **निष्कर्ष (Conclusion)**  
+HTML वेब विकासको आधार हो। यसले वेबपृष्ठको संरचना, लिंक, मल्टिमिडिया, फारम, डिजाइन, र उत्तरदायीता नियन्त्रण गर्न मद्दत गर्छ। यदि तपाईं HTML सिक्दै हुनुहुन्छ भने, यी उदाहरणहरू अभ्यास गर्नुस्। 😊  
+
+👉 **के तपाईंलाई कुनै विशेष विषय विस्तृत रूपमा चाहिन्छ?** 🚀/>
 
     <button onclick="changeListColors()">Change List Colors</button>
 
@@ -65,5 +250,6 @@
     <p>SP = CP + Profit</p>
     <p>Selling Price when loss is given:</p>
     <p>SP = CP - Loss</p>
+
 </body>
 </html>
