--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -29,7 +29,9 @@
     <h3>Red</h3>
     <h4>Orange</h4>
     <h5>Purple</h5>
-
+<a href="https://www.w3schools.com">https://www.w3schools.com</a>
+    <p><a href="https://www.google.com">google</a></p>
+    <p><a href="https://openai.com/chatgpt">chatGPT</a></p>
     <ul>
         <li>Apple</li>
         <li>Banana</li>
