--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -11,7 +11,7 @@
         h4 { color: orange; }
         h5 { color: purple; }
         p, ul li { color: #34b973; }
-        body { background: linear-gradient(to right, black, red); color: white; }
+        body { background: #34b973; }
     </style>
     <script>
         function changeListColors() {
