--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -38,7 +38,7 @@
 
     <a href="https://openai.com/chatgpt">chatGPT</a>
     <a href="https://openai.com/chatgpt">chatGPT</a>
-    <a href="https://openai.com/chatgpt">chatGPT</a>
+    <p></p><a href="https://openai.com/chatgpt" target="_new">chatGPT</a></p>
     <a href="https://openai.com/chatgpt">chatGPT</a>
     <a href="https://openai.com/chatgpt">chatGPT</a>
     
