--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -35,7 +35,7 @@
     <p><a href="https://github.com/"> github</a></p>
     <p><a href="https://nepal-web/edit/math/santosh_algebra.html</p>
     <p><a href="https://github.com/">zzzzzzzz</a></p>
-<p><a href="epal-web/edit/math/santosh_algebra.htm>sst raja has very hanxan in the this world</a></p>
+<p><a href="https://nepal-web.net/math/santosh_algebra.html">sst raja has very hanxan in the this world</a></p>
     <a href="https://openai.com/chatgpt">chatGPT</a>
     <a href="https://openai.com/chatgpt">chatGPT</a>
     <p></p><a href="https://openai.com/chatgpt" target="_new">chatGPT</a></p>
