--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -36,6 +36,8 @@
     <p><a href="https://nepal-web/edit/math/santosh_algebra.html</p>
     <p><a href="https://github.com/">zzzzzzzz</a></p>
 <p><a href="https://nepal-web.net/math/santosh_algebra.html">sst raja has very hanxan in the this world</a></p>
+    <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+
     <a href="https://openai.com/chatgpt">chatGPT</a>
     <a href="https://openai.com/chatgpt">chatGPT</a>
     <p></p><a href="https://openai.com/chatgpt" target="_new">chatGPT</a></p>
