--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -13,6 +13,19 @@
     <!-- p is a paragraph tag. It is used to wrap text and insert a new line at the end of the text. -->
     <h1>this is a header tag</h1>
     <!-- the header tag makes the text bigger and darker -->
-    
+    <table>
+      <!-- table tags make a grid or set of squares -->
+      <tr>
+        <td>1</td><td>2</td><td>3</td>
+      </tr>
+      <!-- tr tags define a row -->
+      <tr>
+        <td>4</td><td>5</td><td>6</td>
+        <!-- td tags define columns -->
+      </tr>
+      <tr>
+        <td>7</td><td>8</td><td>9</td>
+      </tr>
+    </table>
   </body>
 </html>
