--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -26,6 +26,11 @@
       <tr>
         <td>7</td><td>8</td><td>9</td>
       </tr>
+      <tr>
+    <th>Person 1</th>
+    <th>Person 2</th>
+    <th>Person 3</th>
+  </tr>
     </table>
   </body>
 </html>
