--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -6,6 +6,12 @@
 उदाहरणः -->
   <head>
     <!-- The head tag is used to store information about the page like style, title and script code -->
+    <style>
+      table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      }
+    </style>
   </head>
   <body>
     <!-- the body tag is used to display information -->
