karnali size in.

--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -47,6 +47,10 @@
     <td>14</td>
     <td>10</td>
   </tr>
+      tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td
     
     </table>
   </body>
