--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -47,11 +47,14 @@
     <td>14</td>
     <td>10</td>
   </tr>
-      tr>
+     
     <td>Jill</td>
     <td>Smith</td>
     <td>50</td
-    
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
     </table>
   </body>
 </html>
