--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -56,5 +56,20 @@
     <td>94</td>
   </tr>
     </table>
+     <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+ 
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
   </body>
 </html>
