--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -4,6 +4,13 @@
 <!--HTML मा <xmp> ट्याग पुरानो ट्याग हो जुन HTML को कोडलाई जस्ताको तस्तै देखाउन प्रयोग गरिन्थ्यो। तर, HTML5 मा यो ट्याग deprecated (प्रयोग नगर्न सुझाइएको) भइसकेको छ। यसको सट्टा <pre> ट्याग वा code ट्याग प्रयोग गर्न सकिन्छ।
 
 उदाहरणः -->
+   <style>
+        h1 { color: blue; }
+        h2 { color: green; 
+    
+        
+       body { background: blue; }
+    </style>
   <head>
     <!-- The head tag is used to store information about the page like style, title and script code -->
     <style>
