Santosh nkr abdsashdfvauzsDfxtyGXgvsedxifghv

--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -18,6 +18,15 @@
       border: 1px solid black;
       border-collapse: collapse;
       }
+    
+     <style>
+        h1 { color: blue; }
+        h2 { color: green; }
+        h3 { color: red; }
+        h4 { color: orange; }
+        h5 { color: purple; }
+        p, ul li { color: #34b973; }
+        body { background: #34b973; }
     </style>
   </head>
   <body>
