--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -25,8 +25,8 @@
         h3 { color: red; }
         h4 { color: orange; }
         h5 { color: purple; }
-        p, ul li { color: #34b973; }
-        body { background: #34b973; }
+        p, ul li { color: blue; }
+        body { background: blue; }
     </style>
   </head>
   <body>
