--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -42,7 +42,7 @@
       </tr>
       <!-- tr tags define a row -->
       <tr>
-        <td>4</td><td>5</td><td>6</td>
+        <td>4</td><td style="background-color: red;">5</td><td>6</td>
         <!-- td tags define columns -->
       </tr>
       <tr>
