--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -26,7 +26,7 @@
         h4 { color: orange; }
         h5 { color: purple; }
         p, ul li { color: blue; }
-        body { background: blue; }
+        body { background:black; }
     </style>
   </head>
   <body>
