--- a/HTML/content/html_practice/santosh.html
+++ b/HTML/content/html_practice/santosh.html
@@ -46,7 +46,7 @@
         <!-- td tags define columns -->
       </tr>
       <tr>
-        <td>7</td><td>8</td><td>9</td>
+        <td>7</td><td>8</td>< style="background-color:blue ;>9</td>
       </tr>
       <tr>
     <th>Person 1</th>
