--- a/HTML/content/cooking/food_chart.html
+++ b/HTML/content/cooking/food_chart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Foods for Nepali Children / नेपाली बालबालिकाहरूको लागि स्वस्थ खानाहरू</title>
+    <title>Health Foods/ नेपाली बालबालिकाहरूको लागि स्वस्थ खानाहरू</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
