--- a/HTML/content/cooking/diet.html
+++ b/HTML/content/cooking/diet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>बाल आश्रमको मासिक खाना योजना | Monthly Meal Plan for Children's Home</title>
+    <title>बाल आश्रमको मासिक खाना योजना | Meal Plan for Children's Home</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
