--- a/HTML/content/orphanage/bank_account.html
+++ b/HTML/content/orphanage/bank_account.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ne">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank Account for Orphan Children</title>
+    <title>टुहुरा बालबालिकाका लागि बैंक खाता</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,32 +38,32 @@
 <body>
 
 <div class="container">
-    <h1>Bank Account for Orphan Children</h1>
-    <p>Yes, orphan children can have an individual bank account opened for them, but the process can vary depending on the country and the regulations in place. Below is a general overview of how the process works:</p>
+    <h1>टुहुरा बालबालिकाका लागि बैंक खाता</h1>
+    <p>हो, टुहुरा बालबालिकाका लागि व्यक्तिगत बैंक खाता खोल्न सकिन्छ, तर प्रक्रिया देश र नियमहरू अनुसार फरक हुन सक्छ। तल सामान्य प्रक्रिया दिइएको छ:</p>
 
-    <h2>1. Opening an Account</h2>
+    <h2>१. खाता खोल्ने प्रक्रिया</h2>
     <ul>
-        <li>In most cases, a legal guardian or a social worker would need to open the account on behalf of the child, as minors (under 18) typically cannot manage their own bank accounts.</li>
-        <li>The account could be a <strong>custodial account</strong> or a <strong>joint account</strong> where the guardian has control over the funds until the child reaches the age of majority.</li>
+        <li>धेरैजसो अवस्थामा, एक कानुनी अभिभावक वा सामाजिक कार्यकर्ताले बालकको तर्फबाट खाता खोल्न आवश्यक पर्छ, किनभने नाबालक (१८ वर्षभन्दा कम उमेरका) ले आफैं खाता सञ्चालन गर्न सक्दैनन्।</li>
+        <li>खाता <strong>संरक्षक खाता</strong> वा <strong>संयुक्त खाता</strong> हुन सक्छ, जहाँ अभिभावकले बालक १८ वर्षको उमेरसम्म रकमको व्यवस्थापन गर्छन्।</li>
     </ul>
 
-    <h2>2. Saving Money</h2>
+    <h2>२. पैसा बचत गर्ने</h2>
     <ul>
-        <li>Money can be saved in the account, and sometimes the bank may offer a savings account with interest, allowing the funds to grow over time.</li>
-        <li>The guardian can make deposits and monitor the account until the child turns 18.</li>
+        <li>खातामा पैसा बचत गर्न सकिन्छ, र कहिलेकाहीं बैंकले ब्याज सहितको बचत खाता प्रदान गर्न सक्छ, जसले समयसँगै रकम वृद्धि गर्न मद्दत गर्छ।</li>
+        <li>अभिभावकले निक्षेप राख्न र खाताको निगरानी गर्न सक्छन् जबसम्म बालक १८ वर्षको हुँदैन।</li>
     </ul>
 
-    <h2>3. Access to the Money</h2>
+    <h2>३. पैसामा पहुँच</h2>
     <ul>
-        <li>When the child reaches 18 (the legal age of adulthood in many places), they will typically gain full control of the account and be able to access the funds for their use.</li>
-        <li>At that point, they can withdraw the money, use it for education, housing, or other needs, as they see fit.</li>
+        <li>जब बालक १८ वर्ष पुग्छ, उसले खाताको पूर्ण नियन्त्रण प्राप्त गर्छ र आफ्ना आवश्यकताहरूका लागि रकम प्रयोग गर्न सक्छ।</li>
+        <li>उक्त रकम शिक्षा, आवास वा अन्य आवश्यक कार्यहरूमा खर्च गर्न सकिन्छ।</li>
     </ul>
 
-    <h2>Specialized Accounts</h2>
-    <p>In some cases, there may be specialized accounts for orphans or children in care, where the funds are managed for their benefit until they reach adulthood. You should check with a local bank or financial institution to understand the specific options available in your region.</p>
+    <h2>विशेष खाता</h2>
+    <p>कतिपय अवस्थामा, टुहुरा वा हेरचाहमा रहेका बालबालिकाका लागि विशेष खाता उपलब्ध हुन सक्छ, जहाँ रकम वयस्क हुँदासम्म सुरक्षित राखिन्छ। आफ्नो क्षेत्रमा उपलब्ध विकल्पहरू बुझ्नका लागि स्थानीय बैंक वा वित्तीय संस्थासँग परामर्श गर्नुहोस्।</p>
 
-    <h2>Additional Information</h2>
-    <p>If you'd like more detailed information on how to proceed with this process in a particular country or location, please consult with your local bank or financial institution. They can provide the most accurate information based on your specific needs and location.</p>
+    <h2>थप जानकारी</h2>
+    <p>यदि तपाईंले कुनै विशेष देश वा स्थानमा यो प्रक्रिया कसरी गर्ने भन्ने विस्तृत जानकारी चाहनुहुन्छ भने, कृपया आफ्नो स्थानीय बैंक वा वित्तीय संस्थासँग सम्पर्क गर्नुहोस्। तिनीहरूले तपाईंको आवश्यकताहरू अनुसार सबैभन्दा सही जानकारी प्रदान गर्न सक्छन्।</p>
 </div>
 
 </body>
