--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -324,7 +324,43 @@ XML Certificate
      FORUM ABOUT ACADEMY
 W3Schools is optimized for learning and training. Examples might be simplified to improve reading and learning. Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using W3Schools, you agree to have read and accepted our terms of use, cookie and privacy policy.
 
-Copyright 1999-2025 by Refsnes Data. All Rights Reserved. W3Schools is Powered by W3.CSS.
+Copyright 1999-2025 by Refsnes Data. All Rights Reserved. W3Schools is Powered by W3.CSS.Understanding Systems of Equations
+Linear Systems (रैखिक प्रणाली)
+English: A system of linear equations can have:
+
+One solution (lines intersect at a point)
+No solution (parallel lines)
+Infinite solutions (same line)
+नेपाली: रैखिक समीकरणको प्रणालीमा हुन सक्छ:
+
+एउटा समाधान (रेखाहरू एउटा बिन्दुमा काट्छन्)
+कुनै समाधान छैन (समानान्तर रेखाहरू)
+अनन्त समाधानहरू (एउटै रेखा)
+Solution Methods (समाधान विधिहरू)
+English: Systems can be solved by:
+
+Graphical method (finding intersection)
+Substitution method
+Elimination method
+नेपाली: प्रणालीहरू यसरी समाधान गर्न सकिन्छ:
+
+ग्राफीय विधि (काट्ने बिन्दु खोज्ने)
+प्रतिस्थापन विधि
+विलोपन विधि
+Comprehensive Overview of Systems of Equations
+English
+Systems of equations represent mathematical situations where multiple equations must be satisfied simultaneously. These systems are fundamental to both theoretical mathematics and practical applications across various fields. In the simplest case, a system of two linear equations in two variables (x and y) represents two lines in a coordinate plane. The solution to such a system is the point (or points) where these lines intersect, representing values that satisfy both equations simultaneously.
+
+The nature of solutions in linear systems falls into three categories: unique solution (one intersection point), no solution (parallel lines), or infinitely many solutions (identical lines). This classification is determined by the coefficients of the equations and reflects the geometric relationship between the lines they represent. The determinant of the coefficient matrix plays a crucial role in determining the solution type: a non-zero determinant indicates a unique solution, while a zero determinant suggests either no solution or infinitely many solutions.
+
+Real-world applications of systems of equations are vast and varied. In economics, they model supply-demand relationships and market equilibrium. In physics, they describe force balances and motion equations. Engineering uses them for circuit analysis and structural design. The power of systems of equations lies in their ability to model complex relationships and find optimal solutions to real-world problems, making them an essential tool in mathematics and its applications.
+
+नेपाली
+समीकरण प्रणालीहरूले एकैसाथ सन्तुष्ट गर्नुपर्ने बहु समीकरणहरू भएको गणितीय परिस्थितिहरूलाई प्रतिनिधित्व गर्छन्। यी प्रणालीहरू सैद्धान्तिक गणित र विभिन्न क्षेत्रहरूमा व्यावहारिक अनुप्रयोगहरूको लागि आधारभूत छन्। सबैभन्दा सरल अवस्थामा, दुई चरहरू (x र y) भएको दुई रैखिक समीकरणहरूको प्रणालीले निर्देशांक तलमा दुई रेखाहरूलाई प्रतिनिधित्व गर्छ। यस्तो प्रणालीको समाधान ती रेखाहरू काटिने बिन्दु (वा बिन्दुहरू) हो, जसले दुवै समीकरणहरूलाई एकैसाथ सन्तुष्ट गर्ने मानहरूलाई प्रतिनिधित्व गर्छ।
+
+रैखिक प्रणालीहरूमा समाधानको प्रकृति तीन वर्गमा पर्छ: एकल समाधान (एउटा काट्ने बिन्दु), समाधान छैन (समानान्तर रेखाहरू), वा अनन्त धेरै समाधानहरू (एउटै रेखाहरू)। यो वर्गीकरण समीकरणहरूका गुणांकहरूद्वारा निर्धारित हुन्छ र तिनीहरूले प्रतिनिधित्व गर्ने रेखाहरू बीचको ज्यामितीय सम्बन्धलाई प्रतिबिम्बित गर्छ। गुणांक म्याट्रिक्सको डिटर्मिनेन्टले समाधानको प्रकार निर्धारण गर्नमा महत्वपूर्ण भूमिका खेल्छ: शून्य नभएको डिटर्मिनेन्टले एकल समाधान संकेत गर्छ, जबकि शून्य डिटर्मिनेन्टले या त कुनै समाधान छैन वा अनन्त धेरै समाधानहरू छन् भन्ने सुझाव दिन्छ।
+
+समीकरण प्रणालीहरूका वास्तविक जगतका अनुप्रयोगहरू विशाल र विविध छन्। अर्थशास्त्रमा, तिनीहरूले आपूर्ति-माग सम्बन्धहरू र बजार सन्तुलनलाई मोडल गर्छन्। भौतिक विज्ञानमा, तिनीहरूले बल सन्तुलन र गति समीकरणहरूको वर्णन गर्छन्। इन्जिनियरिङले तिनीहरूलाई सर्किट विश्लेषण र संरचनात्मक डिजाइनको लागि प्रयोग गर्छ। समीकरण प्रणालीहरूको शक्ति जटिल सम्बन्धहरूलाई मोडल गर्न र वास्तविक समस्याहरूको इष्टतम समाधान फेला पार्न सक्ने क्षमतामा निहित छ, जसले तिनीहरूलाई गणित र यसका अनुप्रयोगहरूमा एक आवश्यक उपकरण बनाउँछ।
 </p>
 
 </body>
