--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -52,6 +52,7 @@
         <li>Apple</li>
         <li>Banana</li>
         <li>Orange</li>
+        <li>rad</li>
     </ul>### HTML का मूलभूत विशेषताहरू (Basic Features of HTML)  
 
 HTML (HyperText Markup Language) वेब पृष्ठहरूको संरचना बनाउन प्रयोग गरिन्छ। यसमा विभिन्न ट्यागहरू (tags) हुन्छन् जसले सामग्री (content) लाई व्यवस्थित गर्छ। प्रत्येक HTML विशेषतासँग एउटा उदाहरण प्रस्तुत गरिएको छ, जसले तपाईंलाई बुझ्न सजिलो बनाउँछ।  
