changing the background clour

--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -12,6 +12,8 @@ html>
         h5 { color: purple; }
         p, ul li { color: #34b973; }
         body { background: #34b973; }
+      <body style="background:yellow">
+
     </style>
     <script>
         function changeListColors() {
