--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -11,8 +11,7 @@ html>
         h4 { color: orange; }
         h5 { color: purple; }
         p, ul li { color: #34b973; }    
-      <body style="background:yellow">
-
+      <body style="background:yello">
     </style>
     <script>
         function changeListColors() {
