--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -20,6 +20,16 @@ html>
             items.forEach(item => {
                 item.style.color = randomColor;
             });
+            
+A third-party OAuth application (W3Schools) with user:email scopes was recently authorized to access your account.
+Visit https://github.com/settings/connections/applications/7d304be23fde467bd231 for more information.
+
+To see this and other security events for your account, visit https://github.com/settings/security-log
+
+If you run into problems, please contact support by visiting https://github.com/contact
+
+Thanks,
+The GitHub Team
         }
     </script>
 </head>
