--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ne">
 <head>
+  <head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>clour blue</h1>
+</body>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Examples and Math Concepts</title>
