--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -24,6 +24,12 @@
 
   <h2>Useful Links</h2>
   <ul>
+  <li>Green</li>
+  <li>Red</li>
+  <li>Orange</li>
+  <li>Purple</li>
+</ul>
+  <ul>
     <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
     <li><a href="https://www.google.com" target="_blank">Google</a></li>
     <li><a href="https://chat.openai.com" target="_blank">ChatGPT</a></li>
