--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -7,6 +7,7 @@
 <body>
   <h1>clour blue</h1>
 </body>
+ <body ></body>style="background-color: lightgreen;">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
