--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -1,135 +1,80 @@
-<!DOCTYPE html>
-<html lang="ne">
-<head>
-  <head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>clour blue</h1>
-</body>
- <body ></body>style="background-color: lightgreen;">
+<body style="background-color: lightgreen; color: blue;">
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Examples and Math Concepts</title>
-</head>
-<body>
+    <h1>What color am I?</h1>
+    <h2>Green</h2>
+    <h3>Red</h3>
+    <h4>Orange</h4>
+    <h5>Purple</h5>
 
-  <h1>What color am I?</h1>
-  <ul>
-    <li style="color: green;">Green</li>
-    <li style="color: red;">Red</li>
-    <li style="color: orange;">Orange</li>
-    <li style="color: purple;">Purple</li>
-  </ul>
+    <h2>Useful Links</h2>
+    <ul>
+        <li>W3Schools</li>
+        <li>Google</li>
+        <li>ChatGPT</li>
+        <li>GitHub</li>
+        <li>YouTube</li>
+    </ul>
 
-  <h2>Useful Links</h2>
-  <ul>
-  <li>Green</li>
-  <li>Red</li>
-  <li>Orange</li>
-  <li>Purple</li>
-</ul>
-  <ul>
-    <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
-    <li><a href="https://www.google.com" target="_blank">Google</a></li>
-    <li><a href="https://chat.openai.com" target="_blank">ChatGPT</a></li>
-    <li><a href="https://github.com" target="_blank">GitHub</a></li>
-    <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
-  </ul>
+    <p>sst raja is very handsome in this world.</p>
 
-  <p><strong>sst raja</strong> is very handsome in this world.</p>
+    <h2>HTML का मूलभूत विशेषताहरू (Basic Features of HTML)</h2>
+    <h3>संरचना र लेआउट (Structure and Layout)</h3>
+    <p>HTML ले वेब पृष्ठको आधारभूत संरचना प्रदान गर्छ।</p>
 
-  <h2>HTML का मूलभूत विशेषताहरू (Basic Features of HTML)</h2>
-  <ol>
-    <li><strong>संरचना र लेआउट (Structure and Layout)</strong>
-      <p>HTML ले वेब पृष्ठको आधारभूत संरचना प्रदान गर्छ।</p>
-      <code>&lt;section&gt;मेरो वेबसाइटमा स्वागत छ&lt;/section&gt;</code>
-    </li>
+    <section>मेरो वेबसाइटमा स्वागत छ</section>
 
-    <li><strong>हाइपरलिङ्क (Hyperlinks)</strong>
-      <p>HTML ले वेब पृष्ठहरूलाई आपसमा जोड्न प्रयोग गरिन्छ।</p>
-      <code>&lt;a href="https://www.google.com"&gt;गुगलमा जानुहोस्&lt;/a&gt;</code>
-    </li>
+    <h3>हाइपरलिङ्क (Hyperlinks)</h3>
+    <a href="https://www.google.com">गुगलमा जानुहोस्</a>
 
-    <li><strong>मल्टिमिडिया समर्थन (Multimedia Support)</strong>
-      <p>HTML ले छवि, अडियो, र भिडियो समर्थन गर्छ।</p>
-      <code>&lt;img src="example.jpg" alt="उदाहरण छवि"&gt;</code>
-    </li>
+    <h3>मल्टिमिडिया समर्थन (Multimedia Support)</h3>
+    <img src="example.jpg" alt="उदाहरण छवि">
 
-    <li><strong>फारम र इनपुट (Forms and Input)</strong>
-      <form>
-        नाम: <input type="text" name="name"><br>
-        इमेल: <input type="email" name="email"><br>
-        <input type="submit" value="पेश गर्नुहोस्">
-      </form>
-    </li>
+    <h3>फारम र इनपुट (Forms and Input)</h3>
+    नाम: <input type="text"><br>
+    इमेल: <input type="email"><br>
 
-    <li><strong>अर्थपूर्ण तत्वहरू (Semantic Elements)</strong>
-      <code>
-        &lt;header&gt;वेबसाइट शीर्षक&lt;/header&gt;<br>
-        &lt;section&gt;हामी उत्कृष्ट सेवा प्रदान गर्छौं।&lt;/section&gt;<br>
-        &lt;footer&gt;सम्पर्क: example@email.com&lt;/footer&gt;
-      </code>
-    </li>
+    <h3>अर्थपूर्ण तत्वहरू (Semantic Elements)</h3>
+    <header>वेबसाइट शीर्षक</header>
+    <section>हामी उत्कृष्ट सेवा प्रदान गर्छौं।</section>
+    <footer>सम्पर्क: example@email.com</footer>
 
-    <li><strong>CSS र JavaScript एकीकरण (CSS and JavaScript Integration)</strong>
-      <p>CSS ले पृष्ठलाई सुन्दर बनाउँछ, JavaScript ले अन्तरक्रियात्मकता थप्छ।</p>
-    </li>
+    <h3>CSS र JavaScript एकीकरण</h3>
+    <p>CSS ले पृष्ठलाई सुन्दर बनाउँछ, JavaScript ले अन्तरक्रियात्मकता थप्छ।</p>
 
-    <li><strong>उत्तरदायी डिजाइन (Responsive Design)</strong>
-      <code>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</code>
-    </li>
+    <h3>उत्तरदायी डिजाइन (Responsive Design)</h3>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <li><strong>तालिका र सूची (Tables and Lists)</strong>
-      <table border="1">
+    <h3>तालिका र सूची (Tables and Lists)</h3>
+    <table border="1">
         <tr><th>नाम</th><th>उमेर</th></tr>
         <tr><td>राम</td><td>२५</td></tr>
-      </table>
-
-      <ul>
+    </table>
+    <ul>
         <li>स्याउ</li>
         <li>केरा</li>
-      </ul>
-    </li>
+    </ul>
 
-    <li><strong>मेटाडाटा र SEO (Metadata and SEO)</strong>
-      <code>&lt;meta name="description" content="This is an HTML tutorial"&gt;</code>
-    </li>
+    <h3>मेटाडाटा र SEO (Metadata and SEO)</h3>
+    <meta name="description" content="This is an HTML tutorial">
 
-    <li><strong>खुला मानक (Open Standard)</strong>
-      <p>HTML सबै ब्राउजरहरूमा काम गर्छ।</p>
-    </li>
-  </ol>
+    <h3>खुला मानक (Open Standard)</h3>
+    <p>HTML सबै ब्राउजरहरूमा काम गर्छ।</p>
 
-  <h2>Profit and Loss in Math</h2>
-  <h3>Profit</h3>
-  <p>Profit = Selling Price - Cost Price</p>
-  <p>Profit% = (Profit / Cost Price) × 100</p>
+    <h2>Profit and Loss in Math</h2>
+    <h3>Profit</h3>
+    <p>Profit = Selling Price - Cost Price</p>
+    <p>Profit% = (Profit / Cost Price) × 100</p>
 
-  <h3>Loss</h3>
-  <p>Loss = Cost Price - Selling Price</p>
-  <p>Loss% = (Loss / Cost Price) × 100</p>
+    <h3>Loss</h3>
+    <p>Loss = Cost Price - Selling Price</p>
+    <p>Loss% = (Loss / Cost Price) × 100</p>
 
-  <h3>Selling Price Formulas</h3>
-  <ul>
-    <li>SP = CP + Profit</li>
-    <li>SP = CP - Loss</li>
-  </ul>
+    <h3>Selling Price Formulas</h3>
+    <p>SP = CP + Profit</p>
+    <p>SP = CP - Loss</p>
 
-  <h2>Understanding Systems of Equations</h2>
-  <p>English: A system of linear equations can have one solution, no solution, or infinitely many solutions.</p>
-  <p>नेपाली: रैखिक समीकरणको प्रणालीमा हुन सक्छ: एउटा समाधान, कुनै समाधान छैन, वा अनन्त समाधानहरू।</p>
+    <h2>Understanding Systems of Equations</h2>
+    <p>English: A system of linear equations can have one solution, no solution, or infinitely many solutions.</p>
+    <p>नेपाली: रैखिक समीकरणको प्रणालीमा हुन सक्छ: एउटा समाधान, कुनै समाधान छैन, वा अनन्त समाधानहरू।</p>
 
 </body>
-</html>
-Would you like this as a downloadable .html file or want me to add more styling with CSS?
-
-
-
-
-
-
-
-
-
